fix accessibility issues - tweak colors for more contrast - add title to the webpage

--- a/priv/static/styles/main.css
+++ b/priv/static/styles/main.css
@@ -11,10 +11,10 @@
 
 /* colors and whatnot */
 :root {
-  --primary-color: #E2AC55;
-  --secondary-color: #E5654A;
-  --tertiary-color: #C74B51;
-  --quaternary-color: #535E7D;
+  --primary-color: #E5A743;
+  --secondary-color: #E85637;
+  --tertiary-color: #CA3940;
+  --quaternary-color: #485579;
   --text-color: #0F1419;
   --text-color-light: #0F1419CC;
   --bg-color: #EEF1F7;
